# AternyxMetaParser

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  STYLE.md
Meta/: MetaAttributes.h
Source/: CMakeLists.txt  ParserMain.cpp
Source/CodeGenerator/: CodeGenerator.cpp  CodeGenerator.h
Source/Cursor/: Cursor.cpp  Cursor.h  CursorType.cpp  CursorType.h
Source/Parser/: MetaInfo.cpp  MetaInfo.h  Parser.cpp  Parser.h
Source/Utils/: Utils.cpp  Utils.h
Template/: EditorUi.mustache  EnumCast.mustache  ObjectHandleSerialization.mustache  Serialization.mustache  Variant.mustache  VisitEditorUi.mustache  _AllInclude.mustache
example/: main.cpp  params.toml  user_struct.h
source/: CMakeLists.txt  parser_main.cpp
source/code_generator/: code_generator.cpp  code_generator.h
source/config/: arg_config.cpp  arg_config.h
source/cursor/: cursor.cpp  cursor_type.cpp
source/parser/: parser.cpp  parser.h
source/utils/: utils.cpp
source_temp/code_generator/: code_generator.cpp  code_generator.h
source_temp/cursor/: cursor.h
source_temp/parser/: meta_info.cpp
